--- a/requirements.txt
+++ b/requirements.txt
@@ -2,3 +2,6 @@ playwright>=1.40.0
 pytest>=8.0.0
 pytest-asyncio>=0.23.0
 pychromecast>=13.0.0
+fastapi>=0.115.0
+uvicorn>=0.32.0
+structlog>=25.5.0
